ARC-3626: Avoid on mobile the label be stuck against the status

--- a/src/modules/account/components/MaterialRequestDetailBlade/MaterialRequestDetailBlade.module.scss
+++ b/src/modules/account/components/MaterialRequestDetailBlade/MaterialRequestDetailBlade.module.scss
@@ -139,6 +139,7 @@
 			&:has(.p-material-request-detail__download-message) {
 				flex-direction: column;
 				align-items: start;
+				gap: abstracts.$spacer-xs;
 			}
 		}
 	}
